--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,41 @@
-.App {
+.carte{
+  margin: 10px;
+  padding: 15px;
+  border: 2px solid brown;
+  border-radius: 10px;
+  min-height: 200px;
+  width: 150px;
   text-align: center;
+  background-color: rgb(170, 108, 63);
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.carte h3{
+  color: rgb(22, 19, 19);
+  margin: 0;
+  font-weight: 600;
+  font-size: 25px;
+  text-decoration: underline;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.carte p {
+  color: rgb(66, 49, 49);
+  font-size: 12px;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.compteur{
+  text-align: center;
+  margin: 10px;
+  width: 200px;
+  padding: 15px;
+  border: 2px solid black;
+  border-radius: 15px;
 }
 
-.App-link {
-  color: #61dafb;
+.compteur button{
+  background-color: chocolate;
+  text-decoration: 0;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+button:hover {
+  cursor: pointer;
 }
